force-app/main/default/objects/Order/fields/BilledAmountwithouttax__c.field-meta.xml
<CustomField>
    <fullName>BilledAmountwithouttax__c</fullName>
    <description>The sum of all invoices for this order (excluding tax).</description>
    <inlineHelpText>The sum of all invoices for this order (excluding tax).</inlineHelpText>
    <label>Billed Amount (without tax)</label>
    <summarizedField>OrderItem.BilledAmountwithouttax__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>