force-app/main/default/objects/Order/fields/BillingDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>BillingDayOfMonth__c</fullName>
    <description>What day of the Month is the Customer billed on?</description>
    <inlineHelpText>What day of the Month is the Customer billed on?</inlineHelpText>
    <label>Billing Day Of Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillingDayOfMonth</valueSetName>
    </valueSet>
</CustomField>