force-app/main/default/objects/Order/fields/CanceledBillings__c.field-meta.xml
<CustomField>
    <fullName>CanceledBillings__c</fullName>
    <description>Total of all canceled order products.</description>
    <inlineHelpText>Total of all canceled order products.</inlineHelpText>
    <label>Canceled Billing Amount (without tax)</label>
    <summarizedField>OrderItem.CanceledBillings__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>