force-app/main/default/objects/Order/fields/Contains_Partner_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Contains_Partner_Subscriptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Partner Subscriptions?</label>
    <type>Checkbox</type>
</CustomField>