force-app/main/default/objects/Order/fields/Contracted__c.field-meta.xml
<CustomField>
    <fullName>Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Order has been Contracted. Internal flag used to kick off automatic asset and subscription conversion. Salesforce CPQ used this field to automatically convert assets and subscriptions.</description>
    <inlineHelpText>Has this Order been Contracted?</inlineHelpText>
    <label>Contracted</label>
    <type>Checkbox</type>
</CustomField>