force-app/main/default/objects/Order/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <description>Created for the NS/SF integration. SDFC-7</description>
    <formula>Quote.ShippingName  &amp; BR() &amp;
Quote.ShippingStreet__c  &amp; BR() &amp;
Quote.ShippingCity__c  &amp; &quot;, &quot; &amp;
Quote.ShippingState__c  &amp; &quot; &quot; &amp;
Quote.ShippingPostalCode__c &amp;
Quote.BillingCountry__c</formula>
    <label>Delivery Address</label>
    <type>Text</type>
</CustomField>