force-app/main/default/objects/Order/fields/Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether or not the integration will run.</description>
    <inlineHelpText>When set to TRUE this record will not integrate to NetSuite.</inlineHelpText>
    <label>Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>