force-app/main/default/objects/Order/fields/Hardware_Details__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Details__c</fullName>
    <description>New field created to track any Hardware Details (Ticket #, Approved Date, and Approver) for all Quotes/Orders that contain Hardware Lab products.</description>
    <formula>Quote.Hardware_Details__c</formula>
    <inlineHelpText>What is the related ticket #, Approved Date, and Approver listed on the Quote?</inlineHelpText>
    <label>Hardware Details</label>
    <type>Text</type>
</CustomField>