force-app/main/default/objects/Order/fields/InvoiceBatch__c.field-meta.xml
<CustomField>
    <fullName>InvoiceBatch__c</fullName>
    <label>Invoice Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InvoiceBatch</valueSetName>
    </valueSet>
</CustomField>