force-app/main/default/objects/Order/fields/Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>Migration_Status__c</fullName>
    <description>Migration tracking field created by Neocol to support 2023 NetSuite to Salesforce migration.</description>
    <inlineHelpText>Migration tracking field created by Neocol to support 2023 NetSuite to Salesforce migration.</inlineHelpText>
    <label>Migration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>