force-app/main/default/objects/Order/fields/Netsuite_Link__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Link__c</fullName>
    <label>Netsuite Link</label>
    <type>Url</type>
</CustomField>