force-app/main/default/objects/Order/fields/Netsuite_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Order_Id__c</fullName>
    <label>Netsuite Order Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>