force-app/main/default/objects/Order/fields/NetSuite_RA_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_RA_ID__c</fullName>
    <description>Created for the netsuite Salesforce integration.</description>
    <inlineHelpText>Created for the netsuite Salesforce integration.</inlineHelpText>
    <label>NetSuite RA ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>