force-app/main/default/objects/Order/fields/NetSuite_RA_Link__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_RA_Link__c</fullName>
    <description>Created for the SF/NS integration</description>
    <inlineHelpText>Created for the SF/NS integration</inlineHelpText>
    <label>NetSuite RA Link</label>
    <type>Url</type>
</CustomField>