force-app/main/default/objects/Order/fields/PendingBillings__c.field-meta.xml
<CustomField>
    <fullName>PendingBillings__c</fullName>
    <description>Total pending for all order products.</description>
    <inlineHelpText>Total pending for all order products.</inlineHelpText>
    <label>Pending Billing Amount (without tax)</label>
    <summarizedField>OrderItem.PendingBillings__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>