force-app/main/default/objects/Order/fields/Quote_ShippingName__c.field-meta.xml
<CustomField>
    <fullName>Quote_ShippingName__c</fullName>
    <description>Order field to match the Ship To Name on the Quote that isn&apos;t a Lookup field. For Hardware Quotes, the Ship To Name does not always have a corresponding Contact record.</description>
    <inlineHelpText>Who is listed on the Quote&apos;s Ship To Name text field?</inlineHelpText>
    <label>Quote Ship To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>