force-app/main/default/objects/Order/fields/RMA_Error__c.field-meta.xml
<CustomField>
    <fullName>RMA_Error__c</fullName>
    <description>Created for the NS/SF integration.</description>
    <inlineHelpText>Created for the NS/SF integration.</inlineHelpText>
    <label>RMA Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>