force-app/main/default/objects/Order/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <description>Estimated tax amount</description>
    <inlineHelpText>Estimated tax amount</inlineHelpText>
    <label>Estimated Tax</label>
    <summarizedField>OrderItem.TaxAmount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>